--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -150,6 +150,33 @@
           if (firstPage) {
             pageManagerView.activePage(page);
           }
+
+            W.Broadcaster.on("image_dialog_select:deleteImage", function(cid){
+				var comp = W.component.CID2COMPONENT[cid],
+					targetClass;
+				switch (cid){
+					case '4':
+						targetClass = '.xa-lottery-first';
+						break;
+					case '5':
+						targetClass = '.xa-lottery-second';
+						break;
+					case '6':
+						targetClass = '.xa-lottery-third';
+						break;
+					default:
+						targetClass = '.xa-lottery-first';
+						break;
+				}
+
+				var $target = $('#phoneIFrame').contents().find(targetClass);//找到子frame中的相应元素
+				var defaultPosition = $target.attr('defaultPosition');
+				$target.html("<span style='background-position:"+ defaultPosition + ";'></span>");
+
+				comp.model.set({
+					image: ''
+				}, {silent: true});
+			});
         },
         error: function(resp) {
           alert('Failed to load pages in JSON. Please check it.');
