修改描述文字

--- a/weapp/weixin2/templates/weixin/message/template_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/template_messages_detail.html
@@ -51,15 +51,15 @@
                     </div>
                     <div class="xui-contentItem">
                         <label class="control-label tr w70">适用范围：</label>
-                        <span class="mt5">部分商品</span>
+                        <span class="mt5">满59元即可使用 / 下单即可使用</span>
                     </div>
                     <div class="xui-contentItem">
                         <label class="control-label tr w70">使用规则：</label>
-                        <span class="mt5">每笔订单满159元即可使用本券 / 不限</span>
+                        <span class="mt5">每笔2015-09-07至2015-09-15有效</span>
                     </div>
                     <div class="xui-contentItem">
                         <label class="control-label tr w70">remark：</label>
-                        <span class="mt5">点击查看优惠券详情，请在优惠券有使用。</span>
+                        <span class="mt5">点击查看优惠券详情，请在优惠券有效期内使用。</span>
                     </div>
                 </fieldset>
             {% endif %}
@@ -71,11 +71,11 @@
                     </div>
                     <div class="xui-contentItem">
                         <label class="control-label tr w70">适用范围：</label>
-                        <span class="mt5">全部商品</span>
+                        <span class="mt5">满59元即可使用 / 下单即可使用</span>
                     </div>
                     <div class="xui-contentItem">
                         <label class="control-label tr w70">使用规则：</label>
-                        <span class="mt5">每笔订单满159元即可使用本券 / 不限</span>
+                        <span class="mt5">2015-09-07至2015-09-15有效</span>
                     </div>
                     <div class="xui-contentItem">
                         <label class="control-label tr w70">remark：</label>
@@ -156,6 +156,6 @@
          $(".xui-templateIntroduction").hide()
     });
 });
-    
+
 </script>
 {% endblock %}
