完成需求4648 商品详情商品详情图片懒加载

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -51,8 +51,9 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/gmu-2.1.1.js"></script>
         <script type="text/javascript" src="/termite_static/v3/lib/idangerous.swiper.js"></script>
         <script type="text/javascript" src="/termite_static/v3/lib/fastclick.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/lib/refresh.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/lib/$iscroll.js"></script>
+        <!--<script type="text/javascript" src="/termite_static/v3/lib/refresh.js"></script> 
+        <script type="text/javascript" src="/termite_static/v3/lib/$iscroll.js"></script> -->
+        <script type="text/javascript" src="/termite_static/v3/lib/lazyload.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/system.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/cookie.js"></script>
         <script type="text/javascript" src="/termite_static/backbone/underscore-1.4.4.min.js"></script>
