会员列表ROA修改

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -17,7 +17,7 @@
     <ul class="breadcrumb">
 		<li>您当前所在位置</li>
 		<li>
-			<a href="/member/members/get/">会员列表</a>
+			<a href="/member/member_list/">会员列表</a>
 		</li>
 		<li class="active">会员详情</li>
 	</ul>
