--- a/weapp/member/templates/member/editor/member_tags.html
+++ b/weapp/member/templates/member/editor/member_tags.html
@@ -7,7 +7,7 @@
 	<ul class="breadcrumb">
 		<li>您当前所在位置</li>
 		<li>
-			<a href="/member/members/get/">会员管理</a>
+			<a href="/member/member_list/">会员管理</a>
 		</li>
 		<li class="active">会员分组</li>
 	</ul>
