--- a/weapp/weixin2/templates/weixin/advance_manage/edit_member_channel_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_member_channel_qrcode.html
@@ -10,7 +10,7 @@
     <ul class="breadcrumb">
         <li>您当前所在位置</li>
         <li>
-            <a href="/member/members/get/">高级管理</a>
+            <a href="/member/member_list/">高级管理</a>
         </li>
         <li class="active">首草渠道扫码</li>
     </ul>
