bug 文字图片对齐

--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -674,6 +674,7 @@ button.xui-removeImageButton{
 }
 .xui-propertyView-productGroup .propertyGroup_property:first-child .propertyGroup_property_label{
 	margin-top: -20px;
+	line-height: 78px!important;
 }
 /*选择按钮样式*/
 .xui-selectBtn{
