启用底部导航并使用"APP导航模式"，商品列表页才显示底部导航

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -10,11 +10,14 @@
 {% block content-panel %}
 <div id='product_list_contain' data-role="page" data-theme="x" data-title="{{ page_title }}" class="xui-page xui-productsList-page">
 
+    {% if global_navbar == None %}
+    <!-- 当启用底部导航时，不显示购物车 by liupeiyu-->
     <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=shopping_cart&action=show" class="xui-shoppingCartBtn xt-shoppingCartBtn" data-role="button">
         <span class="xui-inner-count xa-shoppingCartCount hidden"></span>
     </a>
+    {% endif %}
 
-    {% if has_category %}
+    {% if has_category and global_navbar == None %}
     <ul data-ui-role="top-dropdown-nav" class="hidden" style="overflow-y:auto;">
         <li><a href='#'></a></li>
         <li><a href="./?woid={{request.webapp_owner_id}}&module=mall&model=products&action=list" data-role="button">全部</a></li>
