--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -208,6 +208,7 @@
     padding-left: 24px;
     padding-right: 24px;
     line-height: 48px;
+    height: 48px;
     border-bottom: 1px solid #CBCBCB;
 }
 .wui-template-globalNavbar .xui-sidePanel .xui-mainMenu li span i.xui-leftArrow{
