--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1266,6 +1266,12 @@ button.xui-removeImageButton{
 	padding-top: 10px;
 	padding-bottom: 5px;
 }
+.xui-propertyView-navbar-navs .propertyGroup_property_dynamicControlField_control .errorHint{
+	padding-left: 83px;
+}
+.xui-propertyView-navbar-navs .xui-navbar-secondnav-navs .errorHint{
+	padding-bottom: 5px;
+}
 .xui-propertyView-navbar-navs .xui-link{
 	display: block;
 	margin-left: -1px;
