--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -227,7 +227,7 @@
 					</td>
 					<td width="100" rowspan="${order.groups.length}">
 						{{if order.member_id > 0}}
-							<a target="_blank" href="/member/member_detail/edit/?id=${ order.member_id }">{{html order.buyer_name}}</a>
+							<a target="_blank" href="/member/detail/?id=${ order.member_id }">{{html order.buyer_name}}</a>
 							<span class="xui-buyerHint xa-buyerHint pr">
 								<i class="xa-buyerHintImg" data-addr="${order.ship_address}" data-tel="${order.ship_tel}" data-message="${order.customer_message}" data-bill-type="${order.bill_type}" data-bill="${order.bill}"></i>
 							</span>
