--- a/weapp/market_tools/tools/lottery/templates/lottery/editor/list_lottery.html
+++ b/weapp/market_tools/tools/lottery/templates/lottery/editor/list_lottery.html
@@ -118,7 +118,7 @@
 					<tr data-id="${record.id}">
 						<td>
 							<div>
-								<a href="/member/member_detail/edit/?id=${record.user_id}">{{html record.username}}</a>
+								<a href="/member/detail/?id=${record.user_id}">{{html record.username}}</a>
 							</div>
 						</td>
 		
