--- a/weapp/static/js/view/weixin_session_view/template.html
+++ b/weapp/static/js/view/weixin_session_view/template.html
@@ -12,7 +12,7 @@
 			<dd class="oneSession_session">
 				<div class="oneSession_title" style="overflow-y: show;">
 					<div class="navbar clearfix">
-						<a href="/member/member_detail/edit/?id=${ member_id }" class="fl">{{html sender_name}}</a>
+						<a href="/member/detail/?id=${ member_id }" class="fl">{{html sender_name}}</a>
 							<div class="fl dropdown x-editRemark">
 								<span class="remarkMessage">
 									（<span class="member_remarks_name">{{if member_remarks_name}}${member_remarks_name}{{else}}备注名{{/if}}</span>）
