--- a/weapp/stats/templates/member/member_summary.html
+++ b/weapp/stats/templates/member/member_summary.html
@@ -228,7 +228,7 @@
                         ${item.rank}
                     </td>
                     <td>
-                        <a href="/member/member_detail/edit/?id=${item.member_id}" target='_blank'>
+                        <a href="/member/detail/?id=${item.member_id}" target='_blank'>
                             {{html item.username}}
                         </a>
                     </td>
@@ -261,7 +261,7 @@
                         ${item.rank}
                     </td>
                     <td>
-                        <a href="/member/member_detail/edit/?id=${item.member_id}" target='_blank'>
+                        <a href="/member/detail/?id=${item.member_id}" target='_blank'>
                             {{html item.username}}
                         </a>
                     </td>
