--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -93,9 +93,9 @@
 					<div class="xui-messageWrap xui-recieved">
 						<div class="xui-i-wrapLeft">
 							<div class="imgBox disTc pr xui-i-imgBox fl">
-							<a href="{{if message.member_id}}/member/member_detail/edit/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
+							<a href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
-							<p class="pl10 mr20 xui-ellipsis-1"><a href="{{if message.member_id}}/member/member_detail/edit/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}} class="mb0" style="line-height:16px;">{{html message.name}}</a></p>
+							<p class="pl10 mr20 xui-ellipsis-1"><a href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}} class="mb0" style="line-height:16px;">{{html message.name}}</a></p>
 						</div>
 						<div class="xui-i-wrapRight">
 							<div class="xui-message pr xui-message-recieved ">
@@ -201,7 +201,7 @@
 						<div class="xui-i-wrapRight">
 							<p class="pl20 fl mr20 xui-ellipsis-1">{{html message.mp_username}}</p>
 							<div class="imgBox disTc pr xui-i-imgBox fr">
-							<a href="{{if message.member_id}}/member/member_detail/edit/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
+							<a href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
 							
 						</div>
