--- a/weapp/stats/templates/sales/order_list.html
+++ b/weapp/stats/templates/sales/order_list.html
@@ -115,7 +115,7 @@
                 </td>
                 <td>
 				{{if order.member_id > 0}}
-                <a href="/member/member_detail/edit/?id=${order.member_id}">{{html order.buyer_name }}</a>
+                <a href="/member/detail/?id=${order.member_id}">{{html order.buyer_name }}</a>
 				{{else}}
 				${order.buyer_name}
 				{{/if}}
