--- a/weapp/webapp/modules/user_center/templates/user_center/editor/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/user_center/editor/user_center.html
@@ -292,14 +292,14 @@
 						</div>
 					{{/if}}
 						<div class="column_block">
-							<a href="/member/member_detail/edit/?id=${ member.id }">
+							<a href="/member/detail/?id=${ member.id }">
 								<img src="{{if member.user_icon}}${ member.user_icon }{{else}}/static/img/user-1.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"/>
 							</a>
 						</div>
 
 						<div class="column_block">
 							<div>
-							<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;">{{html member.username_for_html}}</a>
+							<a href="/member/detail/?id=${ member.id }" style="display:block;width:80px;">{{html member.username_for_html}}</a>
 							</div>
 
 							<div>
