--- a/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
@@ -128,7 +128,7 @@
 								<td class="pr">
 									<div style="width:100px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;">
 									{{if qrcode.bing_member_id}}
-										<a href="/member/member_detail/edit/?id=${qrcode.bing_member_id}" class="xa-showData">
+										<a href="/member/detail/?id=${qrcode.bing_member_id}" class="xa-showData">
 											{{html qrcode.bing_member_name }}
 										</a>
 										<div class='xui-userData xa-data'>
