--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -69,11 +69,11 @@
 									<span style="width:41px;width:41px;">已跑路</span>
 									</div>
 								{{/if}}
-								<a href="/member/member_detail/edit/?id=${message.member_id}" target="_blank"><img src="${message.user_icon}" width="60" height="60"/></a>
+								<a href="/member/detail/?id=${message.member_id}" target="_blank"><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
 							<div class="pl15 disTc xui-i-name pa">
 								<div class="xui-i-member-username" class="mb0 mt0" style="height:35px;">
-									<a href="/member/member_detail/edit/?id=${message.member_id}" target="_blank" class="mb0" style="line-height:16px;">{{html message.name}}</a>
+									<a href="/member/detail/?id=${message.member_id}" target="_blank" class="mb0" style="line-height:16px;">{{html message.name}}</a>
 								</div>
 							</div>
 							{{if message.unread_count}}
