--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -479,7 +479,7 @@
 			W.getApi().call({
 				method: 'post',
 				app: 'member',
-				api: 'member/update',
+				resource:'detail',
 				args: {
 					member_id: memberId,
 					grade_id: gradeId,
