--- a/weapp/apps/app_template/templates/editor/workbench_template.html
+++ b/weapp/apps/app_template/templates/editor/workbench_template.html
@@ -10,7 +10,7 @@ __STRIPPER_TAG__
   <div class="relative">
     <ul class="breadcrumb">
       <li>您当前所在位置</li>
-      <li><a href="/termite2/pages/">百宝箱</a></li>
+      <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
       <li><a href="/apps/{{app_name}}/{{resource.plural_name}}/">{{resource.display_name}}</a></li>
       <li class="active">新建</li>
     </ul>
