修改给所有人群发优惠券功能

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -616,7 +616,7 @@ $(document).ready(function() {
 			var member_ids = [];
 			W.getApi().call({
 	            app: 'member' ,
-	            api: 'member_ids/get',
+	            api: 'member_ids',
 	            args: args,
 	            success: function(data){
 	                member_ids = data.member_ids;
